# imagetool

./: package-lock.json  package.json
.github/workflows/: build-dual.yml
scripts/: sync-version.mjs
src/: App.css  App.tsx  main.tsx  type.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/fonts/: README.txt
src-tauri/src/: lib.rs  main.rs
src/components/: CropSetting.tsx  ImageGrid.tsx  ListImageView.tsx  PaperSetting.tsx  ProgressBar.tsx  ReplicateSetting.tsx  Sidebar.tsx
