[package]
name = "imagetool"
version = "2.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# 关键修复：显式声明库名称，使 main.rs 可以通过 imagetool_lib 访问
[lib]
name = "imagetool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
# 统一使用 2.0.0 稳定版，解决 cargo:dev 报错
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
# 核心依赖：统一使用 2.0.0 稳定版
tauri = { version = "2.0.0", features = ["protocol-asset"] }
tauri-plugin-opener = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2"
crc32fast = "1.3.2"

# 图像处理与物理排版硬核库
image = "0.24.3"
tiff = "0.9"
base64 = "0.21.5"
kamadak-exif = "0.5.5"

[profile.release]
panic = "abort" # 减小二进制体积
codegen-units = 1
lto = true
opt-level = "s"
